# stabby-plugin-demo

./: .gitignore  Cargo.toml  README.md
benches/: futures.rs
plugin-a/: Cargo.toml
plugin-a/src/: lib.rs
plugin-api/: Cargo.toml
plugin-api/src/: lib.rs
src/: host.rs  main.rs  utils.rs
